--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Exploratory Data Analysis -OkCupid Profiles</title>
+  <title>OkCupid Profiles</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
@@ -14,8 +14,8 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
-        <h1>Can Data Analysis help Identify the Perfect Dating Profile?</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
+        <h1>Identify the Perfect Dating Profile?</h1>
+        <p>Explore the dataset</p>
       </div>
     </div>
     <div class="row">
@@ -24,9 +24,10 @@
           <h5>Test Subject ID No.:</h5>
           <select id="selDataset" onchange="optionChanged(this.value)">
             <option value="age">Age</option>
-            <option value="education">Education</option>
-            <option value="drugs">Drugs</option>
-            <option value="religion">Religion</option>
+            <option value="body_type">Body Type</option>
+            <option value="diet">Diet</option>
+            <option value="sign">signs</option>
+            <option value="offspring">Children</option>
           </select>
         </div>
         <div class="panel panel-primary">
