--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
-        <h1>Identify the Perfect Dating Profile?</h1>
+        <h1>Dating Profiles</h1>
         <p>Explore the dataset</p>
       </div>
+    </div>
+  <div id='myDiv'><comparson>
     </div>
     <div class="row">
       <div class="col-md-2">
@@ -28,6 +30,11 @@
             <option value="diet">Diet</option>
             <option value="sign">signs</option>
             <option value="offspring">Children</option>
+            <option value="pets">Pets</option>
+            <option value="religion">Religion</option>
+            <option value="speaks">Languages</option>
+            <option value="status">Status</option>
+            <option value="sex">Sex</option>
           </select>
         </div>
         <div class="panel panel-primary">
@@ -54,6 +61,8 @@
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="./StarterCode/Static/app.js"></script>
+  <script src="//unpkg.com/sunburst-chart"></script>
+  <script src='https://cdn.plot.ly/plotly-2.9.0.min.js'></script>
   
 </body>
 
