--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>Explore the dataset</p>
       </div>
     </div>
-  <div id='myDiv'><comparson>
+  <div id='myDiv'><comparison>
     </div>
     <div class="row">
       <div class="col-md-2">
