--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>Explore the dataset</p>
       </div>
     </div>
-  <div id='myDiv'><comparson>
+  <!-- <div id='myDiv'><comparson> -->
     </div>
     <div class="row">
       <div class="col-md-2">
@@ -32,15 +32,14 @@
             <option value="offspring">Children</option>
             <option value="pets">Pets</option>
             <option value="religion">Religion</option>
-            <option value="speaks">Languages</option>
             <option value="status">Status</option>
             <option value="sex">Sex</option>
           </select>
         </div>
-        <div class="panel panel-primary">
+        <!-- <div class="panel panel-primary">
           <div class="panel-heading">
-            <h3 class="panel-title">Demographic Info</h3>
-          </div>
+            <!-- <h3 class="panel-title">Demographic Info</h3> -->
+          <!-- </div> --> -->
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
@@ -57,7 +56,7 @@
       </div>
     </div>
   </div>
-
+  
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="./StarterCode/Static/app.js"></script>
