--- a/index3.html
+++ b/index3.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>OkCupid Profiles</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="https://unpkg.com/tabulator-tables@5.1.8/dist/css/tabulator.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -18,12 +19,11 @@
         <p>Explore the dataset</p>
       </div>
     </div>
-  <!-- <div id='myDiv'><comparson> -->
     </div>
     <div class="row">
       <div class="col-md-2">
         <div class="well">
-          <h5>Test Subject ID No.:</h5>
+          <h5>Select Column Name</h5>
           <select id="selDataset" onchange="optionChanged(this.value)">
             <option value="age">Age</option>
             <option value="body_type">Body Type</option>
@@ -36,32 +36,24 @@
             <option value="sex">Sex</option>
           </select>
         </div>
-        <!-- <div class="panel panel-primary">
-          <div class="panel-heading">
-            <!-- <h3 class="panel-title">Demographic Info</h3> -->
-          <!-- </div> --> -->
           <div id="sample-metadata" class="panel-body"></div>
         </div>
       </div>
-      <div class="col-md-5">
-        <div id="bar"></div>
-      </div>
-      <div class="col-md-5">
-        <div id="gauge"></div>
-      </div>
-    </div>
-    <div class="row">
       <div class="col-md-12">
-        <div id="bubble"></div>
+        <div id="bar"></div>
       </div>
     </div>
   </div>
+  <canvas id="myChart" width="400" height="400"></canvas>
+  <div id="tabulator_table"></div>
   
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="./StarterCode/Static/app3.js"></script>
   <script src="//unpkg.com/sunburst-chart"></script>
   <script src='https://cdn.plot.ly/plotly-2.9.0.min.js'></script>
+
+ <script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.1.8/dist/js/tabulator.min.js"></script>
   
 </body>
 
